# langchain-practice

./: .env.example  Makefile  README.md  bedrock-first-request.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  chat.py  config.py  db.py  ingest.py  intent.py  normalize.py  retrieve.py  safety_rules.py
app/prompts/: system_prompt.txt
tests/: test_chatbot.py
