[project]
name = "langchain-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.116.0",
    "boto3>=1.43.48",
    "faiss-cpu>=1.14.3",
    "langchain-anthropic>=1.4.8",
    "langchain-aws>=1.6.2",
    "langchain-community>=0.4.2",
    "langchain-faiss>=0.1.1",
    "langchain-openai>=1.3.3",
    "langchain[openai]>=1.3.11",
    "openai>=2.44.0",
    "pgvector>=0.5.0",
    "psycopg[binary]>=3.3.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "sentence-transformers>=5.6.0",
]
